src/v2/yamls/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels:
    io.kompose.service: currikidev-client
  name: currikidev-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currikidev-client
  strategy: {}
  template:
    metadata:
      labels:
        app: client
        io.kompose.network/currikidev-laravel: "true"
        io.kompose.service: currikidev-client
    spec:
      containers:
      - image: quay.io/curriki/client:latest
        imagePullPolicy: Always
        name: currikidev-client
        stdin: true
        volumeMounts:
          - mountPath: /var/app/current/env
            name: currikidev-client-secret
            readOnly: true
      restartPolicy: Always
      volumes:
        - name: currikidev-client-secret
          secret:
            secretName: currikidev-client-secret


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
    io.kompose.service: currikidev-client
  name: currikidev-client
spec:
  type: ClusterIP
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: currikidev-client
