src/v2/yamls/es-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging-external
spec:
  type: LoadBalancer
  selector:
    app: elasticsearch
    role: client
  ports:
  - name: http
    port: 9200
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-client
  labels:
    app: elasticsearch
    role: client
spec:
  selector:
    app: elasticsearch
    role: client
  ports:
  - name: http
    port: 9200
    protocol: TCP
  - name: transport
    port: 9300
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-data
  labels:
    app: elasticsearch
    role: data
spec:
  ports:
  - port: 9300
    name: transport
  clusterIP: None
  selector:
    app: elasticsearch
    role: data
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-master
  labels:
    app: elasticsearch
    role: master
spec:
  selector:
    app: elasticsearch
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
