src/v2/yamls/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: redis
    component: cache
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
        component: cache
    spec:
      containers:
      - name: redis
        image: redis
        imagePullPolicy: Always
        args: ["--requirepass", "$(REDIS_PASS)"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: currikidev-api-storage
          mountPath: /data
          readOnly: false
      volumes:
      - name: currikidev-api-storage
        persistentVolumeClaim:
          claimName: h5p-shared-storage
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis
    component: cache
spec:
  type: LoadBalancer
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    name: redis
    component: cache
